updated a few thumbails

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="col-md-4 mt-3">
             <div class="card">
               <img
-                src="https://zaiocontent.s3.eu-west-2.amazonaws.com/images+of+courses/css_netflix.png"
+                src="/Assets/netflix thumbnail.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -194,7 +194,7 @@
           <div class="col-md-4 mt-3">
             <div class="card">
               <img
-                src="https://res.cloudinary.com/ak-124210/image/upload/v1642434078/yjnzwmihmhghxkwnb6n9.png"
+                src="/Assets/Twitter Thumbnail.png"
                 class="card-img-top"
                 alt="..."
               />
