done updating with airbnb

--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
                       <strong>Skills:</strong>
                       <span class="badge rounded-pill bg-dark">HTML</span>
                       <span class="badge rounded-pill bg-dark">CSS</span>
-                      <span class="badge rounded-pill bg-dark">git</span>
+                      <span class="badge rounded-pill bg-dark">git (Version Control)</span>
                       <span class="badge rounded-pill bg-dark">javascript</span>
                       <span class="badge rounded-pill bg-dark">firebase</span>
                       <span class="badge rounded-pill bg-dark">OOP</span>
                       <span class="badge rounded-pill bg-dark">ReactJS</span>
+                      <span class="badge rounded-pill bg-dark">React Native</span>
                       <span class="badge rounded-pill bg-dark">Redux</span>
                       <span class="badge rounded-pill bg-dark">NodeJS</span>
                       <span class="badge rounded-pill bg-dark">MongoDB</span>
                       <span class="badge rounded-pill bg-dark">Express</span>
+                      <span class="badge rounded-pill bg-dark">Python</span>
                     </p>
                   </div>
                 </div>
@@ -101,6 +103,7 @@
                   self-directed learning through platforms like FreeCodeCamp and
                   YouTube, combined with formal education at
                   <strong>Zaio</strong> in Full Stack Web Development."
+                  and currently a Software Engineering student at  <strong>Wethinkcode</strong>
                 </p>
               </div>
             </div>
@@ -113,6 +116,39 @@
       <div class="container p-5">
         <h1 class="text-center"><mark>Projects</mark></h1>
         <div class="row">
+
+<div class="col-md-4 mt-3">
+            <div class="card">
+              <img
+                src="Assets/airbnb.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+<h5 class="card-title">Modern Accommodation Booking App</h5>
+<p class="card-text">
+Built with React.js for the frontend and Node.js for the backend, this project uses Cloudflare for efficient image hosting and MongoDB to securely manage user accounts and booking details.
+</p>
+                <a
+                  href="https://airbnb-clone-1-qvb0.onrender.com/"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >View Website</a
+                >
+                <a
+                  href="https://github.com/peekay11/AirBnB-Clone"
+                  target="_blank"
+                  class="btn btn-outline-dark"
+                  ><i class="bi bi-code-slash"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
           <div class="col-md-4 mt-3">
             <div class="card">
               <img
@@ -142,7 +178,7 @@
           <div class="col-md-4 mt-3">
             <div class="card">
               <img
-                src="https://zaiocontent.s3.eu-west-2.amazonaws.com/images+of+courses/Tesla.png"
+                src="Assets/tesla.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -182,7 +218,7 @@
                   >View Website</a
                 >
                 <a
-                  href="https://github.com/akhilboddu/vc-netflix"
+                  href="https://github.com/peekay11/Youtube-clone"
                   target="_blank"
                   class="btn btn-outline-dark"
                   ><i class="bi bi-code-slash"></i
